# thermostate

./: CMakeLists.txt  README.md  main.cpp
include/thermostate/: cooler.h  heater.h  temperature.h  temperature_celsius.h  temperature_device.h  temperature_device_controller.h  temperature_modifier.h  thermostate.h  thermostate_controller.h
src/: cooler.cpp  heater.cpp  temperature_celsius.cpp  thermostate.cpp  thermostate_controller.cpp
test/: Gtests.cpp
